src/test/ui/issues/issue-7867.stderr
error[E0308]: mismatched types
  --> $DIR/issue-7867.rs:7:9
   |
LL |         A::B => (),
   |         ^^^^ expected tuple, found enum `A`
   |
   = note: expected type `(bool, bool)`
              found type `A`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
